feat(user profile): implement user profile
- create controller to handle fetching and updating a user profile
- create a method to handle fetching a user profile of a logged in user,
- write tests to cover get user profile
- write tests to cover update user profile
- add input validation
- document user profile feature

[Starts #169817545]
