# src/models/user.js
@@ -8,9 +8,20 @@ module.exports = (sequelize, DataTypes) => {
         type: DataTypes.STRING,
         primaryKey: true,
       },
-      firstName: DataTypes.STRING,
-      lastName: DataTypes.STRING,
-      email: DataTypes.STRING,
+      profilePic: DataTypes.STRING,
+      firstName: DataTypes.STRING(45),
+      lastName: DataTypes.STRING(45),
+      email: DataTypes.STRING(45),
+      gender: {
+        type: DataTypes.STRING(10),
+      },
+      birthDate: DataTypes.DATEONLY,
+      residence: DataTypes.STRING(100),
+      role: DataTypes.STRING(100),
+      department: DataTypes.STRING,
+      lineManager: DataTypes.STRING,
+      preferredLanguage: DataTypes.STRING(45),
+      preferredCurrency: DataTypes.STRING(45),
       strategy: DataTypes.STRING,
       verified: {
         type: DataTypes.BOOLEAN,
