# src/swagger/swagger.json
@@ -25,6 +25,10 @@
     {
       "name": "User",
       "description": "Everything about Users"
+    },
+    {
+      "name": "Profile",
+      "description": "Everything about the user profile"
     }
   ],
   "paths": {
@@ -226,6 +230,55 @@
           "User"
         ]
       }
+    },
+    "/profile": {
+      "get": {
+        "description": "Return user profile",
+        "produces": ["application/json"],
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "ok"
+          },
+          "400": {
+            "description": "bad request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "internal server error"
+          }
+        },
+        "tags": ["Profile"]
+      },
+      "put": {
+        "description": "Update user profile",
+        "consumes": ["application/json"],
+        "security": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/profile"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "created"
+          },
+          "200": {
+            "description": "ok"
+          },
+          "422": {
+            "description": "unprocessable entity"
+          },
+          "500": {
+            "description": "internal server error"
+          }
+        },
+        "tags": [
+          "Profile"
+        ]
+      }
     }
   },
   "parameters": {
@@ -391,6 +444,88 @@
           "access_token": "yfuetglqyuiewlfu;38oeiwruf;yiqerulgfyuertekwuygfqegwfgkqt4t4t6i78i96ol"
         }
       }
+    },
+    "profile": {
+      "in": "body",
+      "name": "Profile",
+      "description": "User should able to update fields of the profile",
+      "schema": {
+        "type": "object",
+        "required": [
+          "profilePic",
+          "firstName",
+          "lastName",
+          "email",
+          "gender",
+          "birthDate",
+          "residence",
+          "role",
+          "department",
+          "lineManager",
+          "preferredLanguage",
+          "preferredCurrency"
+        ],
+        "properties": {
+          "profilePic": {
+            "type": "string"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "gender": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string"
+          },
+          "residence": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          },
+          "department": {
+            "type": "string"
+          },
+          "lineManager": {
+            "type": "string"
+          },
+          "preferredLanguage": {
+            "type": "string"
+          },
+          "preferredCurrency": {
+            "type": "string"
+          }
+        },
+        "example": {
+          "gender": "m",
+          "birthDate": "1994-10-25",
+          "residence": "Kampala",
+          "role": "Software Engineer",
+          "department": "Partner Engineering",
+          "lineManager": "Magero",
+          "preferredLanguage": "English",
+          "preferredCurrency": "usd"
+        }
+      }
     }
-  }
+  },
+  "securityDefinitions": {
+    "JWT": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "Authorization"
+    }
+  },
+  "security": [
+    {
+      "JWT": []
+    }
+  ]
 }
